# librdkafka

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  librdkafka.pc.in
m4/: rd_compiler.m4  rd_openssl.m4
src/: Makefile.am  librdkafka.pc.in  librdkafka_openssl.pc.in  rdkafka.h
