###Copyright (C) 2024 Ildar Rechapov <ildar.rch@gmail.com>
###This code is public domain and can be freely used or copied.

AUTOMAKE_OPTIONS=subdir-objects
MAINTAINERCLEANFILES = Makefile.in

### librdkafka

lib_LTLIBRARIES = libdwarf.la

libdwarf_la_SOURCES = \
cJSON.c \
cJSON.h \
crc32c.c \
crc32c.h \
lz4.c \
lz4frame.c \
lz4frame.h \
lz4frame_static.h \
lz4.h \
lz4hc.c \
lz4hc.h \
queue.h \
rdaddr.c \
rdaddr.h \
rdatomic.h \
rdavg.h \
rdavl.c \
rdavl.h \
rdbase64.c \
rdbase64.h \
rdbuf.c \
rdbuf.h \
rdcrc32.c \
rdcrc32.h \
rddl.c \
rddl.h \
rdendian.h \
rdfloat.h \
rdfnv1a.c \
rdfnv1a.h \
rdgz.c \
rdgz.h \
rd.h \
rdhdrhistogram.c \
rdhdrhistogram.h \
rdhttp.c \
rdhttp.h \
rdinterval.h \
rdkafka_admin.c \
rdkafka_admin.h \
rdkafka_assignment.c \
rdkafka_assignment.h \
rdkafka_assignor.c \
rdkafka_assignor.h \
rdkafka_aux.c \
rdkafka_aux.h \
rdkafka_background.c \
rdkafka_broker.c \
rdkafka_broker.h \
rdkafka_buf.c \
rdkafka_buf.h \
rdkafka.c \
rdkafka_cert.c \
rdkafka_cert.h \
rdkafka_cgrp.c \
rdkafka_cgrp.h \
rdkafka_conf.c \
rdkafka_conf.h \
rdkafka_confval.h \
rdkafka_coord.c \
rdkafka_coord.h \
rdkafka_error.c \
rdkafka_error.h \
rdkafka_event.c \
rdkafka_event.h \
rdkafka_feature.c \
rdkafka_feature.h \
rdkafka_fetcher.c \
rdkafka_fetcher.h \
rdkafka.h \
rdkafka_header.c \
rdkafka_header.h \
rdkafka_idempotence.c \
rdkafka_idempotence.h \
rdkafka_interceptor.c \
rdkafka_interceptor.h \
rdkafka_int.h \
rdkafka_lz4.c \
rdkafka_lz4.h \
rdkafka_metadata.c \
rdkafka_metadata_cache.c \
rdkafka_metadata.h \
rdkafka_mock.c \
rdkafka_mock_cgrp.c \
rdkafka_mock.h \
rdkafka_mock_handlers.c \
rdkafka_mock_int.h \
rdkafka_msgbatch.h \
rdkafka_msg.c \
rdkafka_msg.h \
rdkafka_msgset.h \
rdkafka_msgset_reader.c \
rdkafka_msgset_writer.c \
rdkafka_offset.c \
rdkafka_offset.h \
rdkafka_op.c \
rdkafka_op.h \
rdkafka_partition.c \
rdkafka_partition.h \
rdkafka_pattern.c \
rdkafka_pattern.h \
rdkafka_plugin.c \
rdkafka_plugin.h \
rdkafka_protocol.h \
rdkafka_proto.h \
rdkafka_queue.c \
rdkafka_queue.h \
rdkafka_range_assignor.c \
rdkafka_request.c \
rdkafka_request.h \
rdkafka_roundrobin_assignor.c \
rdkafka_sasl.c \
rdkafka_sasl_cyrus.c \
rdkafka_sasl.h \
rdkafka_sasl_int.h \
rdkafka_sasl_oauthbearer.c \
rdkafka_sasl_oauthbearer.h \
rdkafka_sasl_oauthbearer_oidc.c \
rdkafka_sasl_oauthbearer_oidc.h \
rdkafka_sasl_plain.c \
rdkafka_sasl_scram.c \
rdkafka_sasl_win32.c \
rdkafka_ssl.c \
rdkafka_ssl.h \
rdkafka_sticky_assignor.c \
rdkafka_subscription.c \
rdkafka_telemetry.c \
rdkafka_telemetry_decode.c \
rdkafka_telemetry_decode.h \
rdkafka_telemetry_encode.c \
rdkafka_telemetry_encode.h \
rdkafka_telemetry.h \
rdkafka_timer.c \
rdkafka_timer.h \
rdkafka_topic.c \
rdkafka_topic.h \
rdkafka_transport.c \
rdkafka_transport.h \
rdkafka_transport_int.h \
rdkafka_txnmgr.c \
rdkafka_txnmgr.h \
rdkafka_zstd.c \
rdkafka_zstd.h \
rdlist.c \
rdlist.h \
rdlog.c \
rdlog.h \
rdmap.c \
rdmap.h \
rdmurmur2.c \
rdmurmur2.h \
rdports.c \
rdports.h \
rdposix.h \
rdrand.c \
rdrand.h \
rdregex.c \
rdregex.h \
rdsignal.h \
rdstring.c \
rdstring.h \
rdsysqueue.h \
rdtime.h \
rdtypes.h \
rdunittest.c \
rdunittest.h \
rdvarint.c \
rdvarint.h \
rdwin32.h \
rdxxhash.c \
rdxxhash.h \
regexp.c \
regexp.h \
snappy.c \
snappy_compat.h \
snappy.h \
tinycthread.c \
tinycthread_extra.c \
tinycthread_extra.h \
tinycthread.h \
win32_config.h

librdkafka_la_LDFLAGS = -fPIC -no-undefined -version-info @version_info@ @release_info@

librdkafkapkgincludedir = $(pkgincludedir)-@VMAJ@

EXTRA_DIST = libdwarf.pc.in
